# cinfer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.org
include/: cinfer.h
src/: CMakeLists.txt  cinfer.c
test/: CMakeLists.txt  test_main.cpp
